--- a/front/src/Components/Register/register.css
+++ b/front/src/Components/Register/register.css
@@ -1,4 +1,3 @@
-
 body,
 html {
   width: 100%;
@@ -7,18 +6,15 @@ html {
 }
 
 .image-container {
+  display: flex;
   width: 100%;
   height: 100vh;
-  color: #0056b3;
-}
-
-.register-image {
-  flex: 1;
-  height: 100vh;
+  background-color: #2c2c2c;
 }
 
 .register-image img {
-  width: 100%;
+  width: 60%;
   height: 60%;
-  object-fit: cover;
+  padding: 120px;
+  border-radius: 60px;
 }
