--- a/front/src/Components/Register/register.css
+++ b/front/src/Components/Register/register.css
@@ -9,7 +9,7 @@ html {
   display: flex;
   width: 100%;
   height: 100vh;
-  background-color: #FFE0A8;
+  background-color: #ffe0a8;
 }
 
 .register-image img {
@@ -103,13 +103,11 @@ html {
   border: 2px solid #000;
 }
 
-
-
 .input_container {
   position: absolute;
   right: 10%; /* Distance from the right */
-  top: 60%;
-  background: #f0f0f0;
+  top: 65%;
+  background: #ffe0a8;
   padding: 20px;
   display: flex;
   justify-content: flex-start;
@@ -176,10 +174,10 @@ html {
 }
 
 .input_container::before {
-  content: "USERNAME";
+  content: "PASSWORD";
   position: absolute;
   top: -15px;
-  left: 20px;
+  left: 190px;
   background: #e9b50b;
   color: #000;
   font-weight: bold;
