--- a/front/src/Components/Register/register.css
+++ b/front/src/Components/Register/register.css
@@ -2,15 +2,25 @@ body,
 html {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: white;
+  display: flex;
+}
+.entire {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
 }
 
-.image-container {
-  display: flex;
-  width: 100%;
-  height: 100vh;
+.left-container {
+  flex: 2;
   background-color: #ffe0a8;
-  
+}
+
+.middle-container {
+  flex: 1;
+  background-color: #343332; /* Right side is grey */
 }
 
 .register-image img {
@@ -19,6 +29,7 @@ html {
   padding: 120px;
   border-radius: 60px;
 }
+
 .input__container {
   position: absolute;
   right: 10%; /* Distance from the right */
