--- a/front/src/Components/test/teste.css
+++ b/front/src/Components/test/teste.css
@@ -1,28 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+
+
 body,
 html {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: white;
-  display: flex;
+  background-color: #2e7d32;
+  overflow: hidden;
 }
 .entire {
   display: flex;
-  width: 100;
+  width: 100vw;
   height: 100vh;
+  overflow: hidden; /* Prevents unwanted scrollbars */
 }
 
 .left-container {
-  flex: 2;
-  background-color: #ffe0a8;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffe0a8; /* Left half */
 }
 
 .middle-container {
-  flex: 2;
-  background-color: #343332; /* Right side is grey */
+  width: 50vw; /* Ensure it takes exactly half the screen */
+  height: 100vh;
+  background-color: #2e7d328b;
 }
-
 .register-image {
   position: absolute;
   top: 50%;
@@ -30,14 +36,13 @@ html {
   transform: translate(-50%, -50%);
 }
 
-.register-image video {
-  width: 200px; /* Adjust as needed */
-  height: 200px;
+.register-image img {
+  width: 500px; /* Adjust as needed */
+  height: 500px;
   object-fit: cover; /* Ensures the video fills the circle */
-  border-radius: 50%;
-  border: 5px solid #000; /* Optional border */
+  border-radius: 40%;
+  border: 5px solid #fff; /* Optional border */
 }
-
 .input__container {
   position: absolute;
   right: 10%; /* Distance from the right */
@@ -56,6 +61,8 @@ html {
   perspective: 1000px;
   box-shadow: 10px 10px 0 #000;
   z-index: 1;
+
+  font-family: 'Nunito', sans-serif;
 }
 
 .input__container:hover {
@@ -92,7 +99,7 @@ html {
   transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
   position: relative;
   z-index: 3;
-  font-family: "Poppins", Arial, sans-serif;
+  font-family: 'Nunito', sans-serif;
   letter-spacing: -0.5px;
 }
 
@@ -111,6 +118,8 @@ html {
 
 .input__container::before {
   content: "USERNAME";
+  font-family: 'Nunito', sans-serif;
+
   position: absolute;
   top: -15px;
   left: 20px;
@@ -140,8 +149,9 @@ html {
   transform-style: preserve-3d;
   transform: rotateX(10deg) rotateY(-10deg);
   perspective: 1000px;
-  box-shadow: 10px 10px 0 #000; 
+  box-shadow: 10px 10px 0 #000;
   z-index: 1;
+  font-family: 'Nunito', sans-serif;
 
 }
 
@@ -168,6 +178,8 @@ html {
 }
 
 .input_search {
+  font-family: 'Nunito', sans-serif;
+
   width: 100%;
   outline: none;
   border: 3px solid #000;
@@ -210,7 +222,7 @@ html {
   z-index: 4;
   border: 2px solid #000;
 }
-/* From Uiverse.io by adamgiebl */ 
+/* From Uiverse.io by adamgiebl */
 button {
   position: absolute;
   right: 15%; /* Distance from the right */
@@ -224,11 +236,9 @@ button {
   border-radius: 0.4em;
   box-shadow: 0.1em 0.1em;
   cursor: pointer;
-  
 }
 
 button:hover {
-
   transform: translate(-0.05em, -0.05em);
   box-shadow: 0.15em 0.15em;
 }
