--- a/front/src/Components/test/teste.css
+++ b/front/src/Components/test/teste.css
@@ -47,7 +47,7 @@ html {
   position: absolute;
   right: 10%; /* Distance from the right */
   top: 40%;
-  background: #f0f0f0;
+  background: #8b8b8b;
   padding: 20px;
   display: flex;
   justify-content: flex-start;
@@ -137,7 +137,7 @@ html {
   position: absolute;
   right: 10%; /* Distance from the right */
   top: 58%;
-  background: #ffe0a8;
+  background: #8b8b8b;
   padding: 20px;
   display: flex;
   justify-content: flex-start;
@@ -222,28 +222,92 @@ html {
   z-index: 4;
   border: 2px solid #000;
 }
-/* From Uiverse.io by adamgiebl */
-button {
+.animated-button {
   position: absolute;
-  right: 15%; /* Distance from the right */
-  top: 75%;
-  background: #fbca1f;
-  font-family: inherit;
-  padding: 0.6em 1.3em;
-  font-weight: 900;
-  font-size: 18px;
-  border: 3px solid black;
-  border-radius: 0.4em;
-  box-shadow: 0.1em 0.1em;
+  top: 81%;
+  left: 75%;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 16px 36px;
+  border: 4px solid;
+  border-color: transparent;
+  font-size: 16px;
+  background-color: inherit;
+  border-radius: 100px;
+  font-weight: 600;
+  color: #e9b50b;
+  box-shadow: 0 0 0 2px #e9b50b;
   cursor: pointer;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-button:hover {
-  transform: translate(-0.05em, -0.05em);
-  box-shadow: 0.15em 0.15em;
+.animated-button svg {
+  position: absolute;
+  width: 24px;
+  fill: #e9b50b;
+  z-index: 9;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-button:active {
-  transform: translate(0.05em, 0.05em);
-  box-shadow: 0.05em 0.05em;
+.animated-button .arr-1 {
+  right: 16px;
+}
+
+.animated-button .arr-2 {
+  left: -25%;
+}
+
+.animated-button .circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  background-color: #e9b50b;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .text {
+  position: relative;
+  z-index: 1;
+  transform: translateX(-12px);
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button:hover {
+  box-shadow: 0 0 0 12px transparent;
+  color: #212121;
+  border-radius: 12px;
+}
+
+.animated-button:hover .arr-1 {
+  right: -25%;
+}
+
+.animated-button:hover .arr-2 {
+  left: 16px;
+}
+
+.animated-button:hover .text {
+  transform: translateX(12px);
+}
+
+.animated-button:hover svg {
+  fill: #212121;
+}
+
+.animated-button:active {
+  scale: 0.95;
+  box-shadow: 0 0 0 4px #e9b50b;
+}
+
+.animated-button:hover .circle {
+  width: 220px;
+  height: 220px;
+  opacity: 1;
 }
