--- a/front/src/Components/Login/login.css
+++ b/front/src/Components/Login/login.css
@@ -1,28 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+
+
 body,
 html {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: white;
-  display: flex;
+  background-color: #2e7d32;
+  overflow: hidden;
 }
 .entire {
   display: flex;
-  width: 100;
+  width: 100vw;
   height: 100vh;
+  overflow: hidden; /* Prevents unwanted scrollbars */
 }
 
 .left-container {
-  flex: 2;
-  background-color: #ffe0a8;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffe0a8; /* Left half */
 }
 
 .middle-container {
-  flex: 2;
-  background-color: #343332; /* Right side is grey */
+  width: 50vw; /* Ensure it takes exactly half the screen */
+  height: 100vh;
+  background-color: #2e7d328b;
 }
-
 .register-image {
   position: absolute;
   top: 50%;
@@ -31,18 +37,17 @@ html {
 }
 
 .register-image video {
-  width: 200px; /* Adjust as needed */
-  height: 200px;
+  width: 500px; /* Adjust as needed */
+  height: 500px;
   object-fit: cover; /* Ensures the video fills the circle */
-  border-radius: 50%;
-  border: 5px solid #000; /* Optional border */
+  border-radius: 40%;
+  border: 5px solid #fff; /* Optional border */
 }
-
 .input__container {
   position: absolute;
   right: 10%; /* Distance from the right */
   top: 40%;
-  background: #f0f0f0;
+  background: #8b8b8b;
   padding: 20px;
   display: flex;
   justify-content: flex-start;
@@ -56,6 +61,8 @@ html {
   perspective: 1000px;
   box-shadow: 10px 10px 0 #000;
   z-index: 1;
+
+  font-family: 'Nunito', sans-serif;
 }
 
 .input__container:hover {
@@ -92,7 +99,7 @@ html {
   transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
   position: relative;
   z-index: 3;
-  font-family: "Poppins", Arial, sans-serif;
+  font-family: 'Nunito', sans-serif;
   letter-spacing: -0.5px;
 }
 
@@ -111,6 +118,8 @@ html {
 
 .input__container::before {
   content: "USERNAME";
+  font-family: 'Nunito', sans-serif;
+
   position: absolute;
   top: -15px;
   left: 20px;
@@ -128,7 +137,7 @@ html {
   position: absolute;
   right: 10%; /* Distance from the right */
   top: 58%;
-  background: #ffe0a8;
+  background: #8b8b8b;
   padding: 20px;
   display: flex;
   justify-content: flex-start;
@@ -140,8 +149,9 @@ html {
   transform-style: preserve-3d;
   transform: rotateX(10deg) rotateY(-10deg);
   perspective: 1000px;
-  box-shadow: 10px 10px 0 #000; 
+  box-shadow: 10px 10px 0 #000;
   z-index: 1;
+  font-family: 'Nunito', sans-serif;
 
 }
 
@@ -168,6 +178,8 @@ html {
 }
 
 .input_search {
+  font-family: 'Nunito', sans-serif;
+
   width: 100%;
   outline: none;
   border: 3px solid #000;
@@ -210,30 +222,183 @@ html {
   z-index: 4;
   border: 2px solid #000;
 }
-/* From Uiverse.io by adamgiebl */ 
-button {
+.animated-button {
   position: absolute;
-  right: 15%; /* Distance from the right */
-  top: 75%;
-  background: #fbca1f;
-  font-family: inherit;
-  padding: 0.6em 1.3em;
-  font-weight: 900;
-  font-size: 18px;
-  border: 3px solid black;
-  border-radius: 0.4em;
-  box-shadow: 0.1em 0.1em;
+  top: 81%;
+  left: 75%;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 16px 36px;
+  border: 4px solid;
+  border-color: transparent;
+  font-size: 16px;
+  background-color: inherit;
+  border-radius: 100px;
+  font-weight: 600;
+  color: #e9b50b;
+  box-shadow: 0 0 0 2px #e9b50b;
   cursor: pointer;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button svg {
+  position: absolute;
+  width: 24px;
+  fill: #e9b50b;
+  z-index: 9;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .arr-1 {
+  right: 16px;
+}
+
+.animated-button .arr-2 {
+  left: -25%;
+}
+
+.animated-button .circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  background-color: #e9b50b;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .text {
+  position: relative;
+  z-index: 1;
+  transform: translateX(-12px);
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button:hover {
+  box-shadow: 0 0 0 12px transparent;
+  color: #212121;
+  border-radius: 12px;
+}
+
+.animated-button:hover .arr-1 {
+  right: -25%;
+}
+
+.animated-button:hover .arr-2 {
+  left: 16px;
+}
+
+.animated-button:hover .text {
+  transform: translateX(12px);
+}
+
+.animated-button:hover svg {
+  fill: #212121;
+}
+
+.animated-button:active {
+  scale: 0.95;
+  box-shadow: 0 0 0 4px #e9b50b;
+}
+.animated-button:hover .circle {
+  width: 220px;
+  height: 220px;
+  opacity: 1;
+}
+
+.register-image button
+{
+    position: absolute;
+    top: 105%;
+    left: 38%;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding-top: 60px;
+    padding: 16px 36px;
+    border: 4px solid;
+    border-color: transparent;
+    font-size: 16px;
+    background-color: inherit;
+    border-radius: 100px;
+    font-weight: 600;
+    color: #e9b50b;
+    box-shadow: 0 0 0 2px #e9b50b;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  }
   
-}
-
-button:hover {
-
-  transform: translate(-0.05em, -0.05em);
-  box-shadow: 0.15em 0.15em;
-}
-
-button:active {
-  transform: translate(0.05em, 0.05em);
-  box-shadow: 0.05em 0.05em;
-}
+  .register-image button svg {
+    position: absolute;
+    width: 24px;
+    fill: #e9b50b;
+    z-index: 9;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .register-image button .arr-1 {
+    right: 16px;
+  }
+  
+  .register-image button .arr-2 {
+    left: -25%;
+  }
+  
+  .register-image button .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: #e9b50b;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .register-image button .text {
+    position: relative;
+    z-index: 1;
+    transform: translateX(-12px);
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .register-image button:hover {
+    box-shadow: 0 0 0 12px transparent;
+    color: #212121;
+    border-radius: 12px;
+  }
+  
+  .register-image button:hover .arr-1 {
+    right: -25%;
+  }
+  
+  .register-image button:hover .arr-2 {
+    left: 16px;
+  }
+  
+  .register-image button:hover .text {
+    transform: translateX(12px);
+  }
+  
+  .register-image button:hover svg {
+    fill: #212121;
+  }
+  
+  .register-image button:active {
+    scale: 0.95;
+    box-shadow: 0 0 0 4px #e9b50b;
+  }
+  .register-image button:hover .circle {
+    width: 220px;
+    height: 220px;
+    opacity: 1;
+  }
+  
